--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,17 @@ main {
   box-sizing: border-box;
   overflow-y: hidden;
   overscroll-behavior: contain;
+  display: block;
+}
+.iformation {
+  display: grid;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-rows: auto 1fr;
+  gap: 10px;
+  grid-template-areas:
+    "details visual";
+  row-gap: 10px;
 }
 
 /* hide the one you’re not using */
@@ -220,6 +231,8 @@ main {
 
 /* 1) lay out logo + text side by side */
 .header-row {
+  grid-area: header;
+  justify-content: header;
   display: flex;
   align-items: center;
   margin-bottom: 0.75rem;
@@ -255,9 +268,11 @@ main {
 
 /* common .visual styles */
 .visual {
-  position: absolute;
-  align-items: center;
+  grid-area: visual;
+  align-self: center;
+  justify-self: end;
   justify-content: center;
+  align-items: center;
 }
 /* gauge sizing */
 .visual.prediction {
@@ -267,7 +282,6 @@ main {
   justify-content: center;
   width: 150px;
   height: 75px;
-  padding-bottom: 5px;
 
 }
 .visual.prediction .percent {
@@ -309,7 +323,6 @@ main {
   color: rgb(218, 218, 218);
   border-radius: 10px;
   padding: 12px 16px;
-  margin-top: 10px;
 }
 .visual.countdown .count {
   font-size: 2rem;
@@ -646,6 +659,7 @@ main {
   z-index: 2;
 }
 .card .details {
+  grid-area: details;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
