--- a/styles.css
+++ b/styles.css
@@ -803,3 +803,8 @@ main {
     margin-top: 1rem;
   }
 }
+@media (device-width: 428px) { 
+  .header-top h1 {
+    transform: translateY(-10px);
+  }
+}
