--- a/styles.css
+++ b/styles.css
@@ -805,10 +805,8 @@ main {
   }
 }
 @media (max-width: 500px) { 
-  .header-top h1 {
-    transform: translateY(-8px);
-  }
   .search-box {
-    width: 175px;
+    width: 150px;
+    padding-right: 0;
   }
 }
