--- a/styles.css
+++ b/styles.css
@@ -804,3 +804,9 @@ main {
     margin-top: 1rem;
   }
 }
+@media (max-width: 500px) { 
+  .search-box {
+    width: 175px;
+    align-items: end;
+  }
+}
